# sleepyask

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: python-publish.yml
src/sleepyask/: __init__.py  chat.py  chatgpt.py
src/sleepyask/free/: chat.py  chatgpt.py
src/sleepyask/openai/: chat.py  chatgpt.py
