[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepyask"
version = "4.1.1"
authors = [
  { name="hwelsters", email="redacted@redacted.redacted" },
]
description = "A small tool for automating collecting data from ChatGPT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
dependencies = [
  'schedule == 1.1.0',
  'openai >= 0.27.2'
]

[project.urls]
"Homepage" = "https://github.com/hwelsters/sleepyask"
"Bug Tracker" = "https://github.com/hwelsters/sleepyask/issues"
