[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sleepyask"
version = "6.1.0"
authors = [
  { name="hwelsters", email="redacted@redacted.redacted" },
]
description = "A small tool for automating collecting data from ChatGPT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
dependencies = [
  'openai-async>=0.0.3'
]

[project.urls]
"Homepage" = "https://github.com/hwelsters/sleepyask"
"Bug Tracker" = "https://github.com/hwelsters/sleepyask/issues"